# agro_mini

./: Cargo.toml  README.md  crop.csv
src/: cli.rs  crop_parser.rs  dto.rs  enums.rs  errors.rs  file_ops.rs  interfaces.rs  main.rs  os.rs  plant_service.rs  read_file.rs  seeds.rs  setup.rs  weather_service.rs
test_data/: crops.csv  file.txt  seeds.csv
