[package]
name = "agro_mini"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
csv = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
chrono = "0.4.24"
rand = "0.8.5"
libc ={ version = "0.2", features = ["extra_traits"] }

[profile.release]
panic = "abort"